--- a/src/pages/index/index.scss
+++ b/src/pages/index/index.scss
@@ -1,11 +1,10 @@
-
 .welcome {
-    height: 40Px;
-    color: rgba(16, 16, 16, 1);
-    font-size: 28Px;
-    text-align: center;
-    justify-content: center;
-    display: flex;
-    font-family: PingFangSC-regular;
-    margin:30Px auto;
+  height: 40px;
+  color: rgba(16, 16, 16, 1);
+  font-size: 28px;
+  text-align: center;
+  justify-content: center;
+  display: flex;
+  font-family: PingFangSC-regular;
+  margin: 30px auto;
 }
