--- a/src/pages/index/components/statistics/statistics_block/statistics_block.scss
+++ b/src/pages/index/components/statistics/statistics_block/statistics_block.scss
@@ -1,25 +1,24 @@
 .title {
-    width: 154Px;
-    height: 20Px;
-    color: rgba(16, 16, 16, 1);
-    font-size: 14Px;
-    text-align: center;
-    font-family: PingFangSC-regular;
-    display: block;
-    
+  width: 154px;
+  height: 20px;
+  color: rgba(16, 16, 16, 1);
+  font-size: 14px;
+  text-align: center;
+  font-family: PingFangSC-regular;
+  display: block;
 }
 
 .number {
-    width: 154Px;
-    height: 50Px;
-    color: rgba(16, 16, 16, 1);
-    font-size: 36Px;
-    text-align: center;
-    font-family: PingFangSC-regular;
-    display: block;
+  width: 154px;
+  height: 50px;
+  color: rgba(16, 16, 16, 1);
+  font-size: 36px;
+  text-align: center;
+  font-family: PingFangSC-regular;
+  display: block;
 }
 .statistics {
-    align-content: center;
-    display: block;
-    float: left;
+  align-content: center;
+  display: block;
+  float: left;
 }
