统一代码风格

--- a/src/pages/info/index.scss
+++ b/src/pages/info/index.scss
@@ -1,14 +1,14 @@
 .text_id {
-    position: fixed;
-    left: 87Px;
-    top: 141Px;
-    height: 20Px;
-    color: rgba(16, 16, 16, 1);
-    font-size: 14Px;
-    text-align: center;
-    font-family: PingFangSC-regular;
+  position: fixed;
+  left: 87px;
+  top: 141px;
+  height: 20px;
+  color: rgba(16, 16, 16, 1);
+  font-size: 14px;
+  text-align: center;
+  font-family: PingFangSC-regular;
 }
 
 .statusbar {
-    width: 100%;
+  width: 100%;
 }
