--- a/src/pages/marklabel/label_page/label_page.scss
+++ b/src/pages/marklabel/label_page/label_page.scss
@@ -1,24 +1,22 @@
 .labelpage {
-    display: block;
+  display: block;
 }
 
 .title {
-    height: 20Px;
-    color: rgba(16, 16, 16, 1);
-    font-size: 14Px;
-    text-align: left;
-    font-family: PingFangSC-regular;
-    display: block;
-    margin: 10Px auto 1% 10%;
-    display: block;
-    
+  height: 20px;
+  color: rgba(16, 16, 16, 1);
+  font-size: 14px;
+  text-align: left;
+  font-family: PingFangSC-regular;
+  display: block;
+  margin: 10px auto 1% 10%;
+  display: block;
 }
 
 .labels {
-    width: 80%;
-    display: flex;
-    justify-content: space-around;
-    flex-wrap: wrap;
-    margin: 0Px auto;
+  width: 80%;
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  margin: 0px auto;
 }
-
