调整页面及组件样式

--- a/src/components/capsule/index.scss
+++ b/src/components/capsule/index.scss
@@ -1,10 +1,10 @@
 .capsule {
-    left: 6Px;
-    top: 52Px;
-    width: 146Px;
-    height: 30Px;
-    line-height: 30Px;
-    border-radius: 17Px;
+    left: 4%;
+    top: 104rpx;
+    width: 42%;
+    height: 60rpx;
+    line-height: 60rpx;
+    border-radius: 34rpx;
     background-color: rgba(249, 249, 249, 1);
     color: rgba(16, 16, 16, 1);
     font-size: 14Px;
@@ -14,10 +14,10 @@
 }
 
 .tip {
-    width: 62Px;
-    height: 20Px;
+    width: 124rpx;
+    height: 40rpx;
     color: rgba(16, 16, 16, 1);
-    font-size: 14Px;
+    font-size: 28rpx;
     text-align: center;
     font-family: PingFangSC-regular;
 }
