--- a/src/pages/index/components/statistics/statistics.scss
+++ b/src/pages/index/components/statistics/statistics.scss
@@ -4,7 +4,7 @@
 }
 
 .linebetween {
-  width: 0px;
-  height: 65px;
-  border: 0.4px solid rgba(187, 187, 187, 1);
+  width: 0rpx;
+  height: 130rpx;
+  border: 1rpx solid rgba(187, 187, 187, 1);
 }
