--- a/src/pages/index/components/statistics/statistics_block/statistics_block.scss
+++ b/src/pages/index/components/statistics/statistics_block/statistics_block.scss
@@ -1,18 +1,18 @@
 .title {
-  width: 154px;
-  height: 20px;
+  width: 308rpx;
+  height: 40rpx;
   color: rgba(16, 16, 16, 1);
-  font-size: 14px;
+  font-size: 28rpx;
   text-align: center;
   font-family: PingFangSC-regular;
   display: block;
 }
 
 .number {
-  width: 154px;
-  height: 50px;
+  width: 308rpx;
+  height: 100rpx;
   color: rgba(16, 16, 16, 1);
-  font-size: 36px;
+  font-size: 72rpx;
   text-align: center;
   font-family: PingFangSC-regular;
   display: block;
