--- a/src/pages/index/index.scss
+++ b/src/pages/index/index.scss
@@ -1,10 +1,10 @@
 .welcome {
-  height: 40px;
+  height: 80rpx;
   color: rgba(16, 16, 16, 1);
-  font-size: 28px;
+  font-size: 56rpx;
   text-align: center;
   justify-content: center;
   display: flex;
   font-family: PingFangSC-regular;
-  margin: 30px auto;
+  margin: 60rpx auto;
 }
