--- a/src/pages/info/index.scss
+++ b/src/pages/info/index.scss
@@ -1,10 +1,10 @@
 .text_id {
-  position: fixed;
-  left: 87px;
-  top: 141px;
-  height: 20px;
+  position: relative;
+  left: 174rpx;
+  top: 282rpx;
+  height: 40rpx;
   color: rgba(16, 16, 16, 1);
-  font-size: 14px;
+  font-size: 28rpx;
   text-align: center;
   font-family: PingFangSC-regular;
 }
