--- a/src/pages/work/components/label_group/label_group.scss
+++ b/src/pages/work/components/label_group/label_group.scss
@@ -3,13 +3,13 @@
 }
 
 .title {
-    height: 20Px;
+    height: 40rpx;
     color: rgba(16, 16, 16, 1);
-    font-size: 14Px;
+    font-size: 28rpx;
     text-align: left;
     font-family: PingFangSC-regular;
     display: block;
-    margin: 10Px auto 1% 10%;
+    margin: 20rpx auto 1% 10%;
     display: block;
     
 }
@@ -19,6 +19,6 @@
     display: flex;
     justify-content: space-around;
     flex-wrap: wrap;
-    margin: 0Px auto;
+    margin: 0rpx auto;
 }
 
