--- a/src/pages/work/components/label_group/an_label/an_label.scss
+++ b/src/pages/work/components/label_group/an_label/an_label.scss
@@ -1,28 +1,28 @@
 .anlabel {
     margin: 2% 4%;
     width: max-content;
-    height: 26Px;
-    line-height: 20Px;
-    border-radius: 13Px;
+    height: 52rpx;
+    line-height: 40rpx;
+    border-radius: 26rpx;
     background-color: rgba(139, 195, 74, 1);
     text-align: center;
     display: flex;
 }
 
 .ic {
-    margin: 3Px 6Px 3Px 0;
+    margin: 6rpx 12rpx 6rpx 0;
     opacity: 0;
 }
 
 .name {
     display: block;
     width: max-content;
-    height: 20Px;
+    height: 40rpx;
     color: rgba(249, 249, 249, 1);
-    font-size: 14Px;
+    font-size: 28rpx;
     text-align: left;
     font-family: PingFangSC-regular;
-    margin: auto 26Px auto 19Px; 
+    margin: auto 52rpx auto 38rpx; 
 }
 
 
