--- a/src/pages/work/components/operate_bar/operate_bar.scss
+++ b/src/pages/work/components/operate_bar/operate_bar.scss
@@ -5,7 +5,7 @@
     position: fixed;
     bottom: 0;
     left: 0;
-    height: 62Px;
+    height: 124rpx;
     width: 100%;
     background-color: #F9F9F9;
 }
@@ -13,12 +13,12 @@
 .abutton {
     display: block;
     width: fit-content;
-    height: 30Px;
-    border-radius: 4Px;
+    height: 60rpx;
+    border-radius: 8rpx;
     color: rgba(16, 16, 16, 1);
-    font-size: 14Px;
-    line-height: 30Px;
+    font-size: 28rpx;
+    line-height: 60rpx;
     text-align: center;
     font-family: Microsoft Yahei;
-    border: 1Px solid rgba(187, 187, 187, 1);
+    border: 1rpx solid rgba(187, 187, 187, 1);
 }
