--- a/src/components/capsule/index.scss
+++ b/src/components/capsule/index.scss
@@ -1,23 +1,23 @@
 .capsule {
-    left: 4%;
-    top: 104rpx;
-    width: 42%;
-    height: 60rpx;
-    line-height: 60rpx;
-    border-radius: 34rpx;
-    background-color: rgba(249, 249, 249, 1);
-    color: rgba(16, 16, 16, 1);
-    font-size: 14Px;
-    text-align: center;
-    font-family: Arial;
-    position: fixed;
+  left: 4%;
+  top: 104rpx;
+  width: 42%;
+  height: 60rpx;
+  line-height: 60rpx;
+  border-radius: 34rpx;
+  background-color: rgba(249, 249, 249, 1);
+  color: rgba(16, 16, 16, 1);
+  font-size: 14px;
+  text-align: center;
+  font-family: Arial;
+  position: fixed;
 }
 
 .tip {
-    width: 124rpx;
-    height: 40rpx;
-    color: rgba(16, 16, 16, 1);
-    font-size: 28rpx;
-    text-align: center;
-    font-family: PingFangSC-regular;
+  width: 124rpx;
+  height: 40rpx;
+  color: rgba(16, 16, 16, 1);
+  font-size: 28rpx;
+  text-align: center;
+  font-family: PingFangSC-regular;
 }
