--- a/src/components/statusBar/index.scss
+++ b/src/components/statusBar/index.scss
@@ -1,13 +1,13 @@
 .statusbar {
-    width: 100%;
-    top: 0;
-    left: 0;
-    position: fixed;
-    background-color: #F9F9F9;
+  width: 100%;
+  top: 0;
+  left: 0;
+  position: fixed;
+  background-color: #f9f9f9;
 }
 
 .title {
-    left: 8%;
-    position: fixed;
-    width: fit-content;
+  left: 8%;
+  position: fixed;
+  width: fit-content;
 }
