--- a/src/pages/info/index.module.scss
+++ b/src/pages/info/index.module.scss
@@ -1,4 +1,4 @@
-.text_id {
+.textID {
   position: relative;
   left: 174rpx;
   top: 282rpx;
@@ -7,8 +7,4 @@
   font-size: 28rpx;
   text-align: center;
   font-family: PingFangSC-regular;
-}
-
-.statusbar {
-  width: 100%;
 }
