[fix] 调整目录 增加appid 修改错误interface

--- a/src/pages/login/index.scss
+++ b/src/pages/login/index.scss
@@ -1,5 +1,5 @@
-@import "../../common/style/index.scss";
-@import "../../common/style/color.scss";
+@import "../../static/style/index.scss";
+@import "../../static/style/color.scss";
 
 .container {
 
