--- a/src/pages/work/components/label_group/an_label/an_label.scss
+++ b/src/pages/work/components/label_group/an_label/an_label.scss
@@ -1,29 +1,36 @@
+$label_height: 60rpx;
+$label_width: 210rpx;
+$icon_size: 40rpx;
+
+
 .anlabel {
-    margin: 2% 4%;
-    width: max-content;
-    height: 52rpx;
-    line-height: 40rpx;
-    border-radius: 26rpx;
-    background-color: rgba(139, 195, 74, 1);
-    text-align: center;
-    display: flex;
-}
+  width: $label_width;
+  height: $label_height;
+  margin: 20rpx 0 0 0;
+  line-height: 60rpx;
+  border-radius: 20rpx;
+  background-color: rgba(139, 195, 74, 1);
+  text-align: center;
+  display: flex;
+  justify-content: flex-end;
 
-.ic {
-    margin: 6rpx 12rpx 6rpx 0;
-    opacity: 0;
-}
-
-.name {
+  .name {
     display: block;
-    width: max-content;
-    height: 40rpx;
-    color: rgba(249, 249, 249, 1);
-    font-size: 28rpx;
-    text-align: left;
-    font-family: PingFangSC-regular;
-    margin: auto 52rpx auto 38rpx; 
+    width: $label_width - 2 * $icon_size;
+    font-size: 25rpx;
+    color: white;
+  }
+
+  .ic {
+    height: $icon_size;
+    width: $icon_size;
+    margin: ($label_height - $icon_size)/2 15rpx;
+  }
 }
+
+
+
+
 
 
 
