[fix] 用icon替代搁置图片数

--- a/src/pages/index/components/shelveBar/index.module.scss
+++ b/src/pages/index/components/shelveBar/index.module.scss
@@ -39,5 +39,10 @@
       text-align: right;
       font-family: PingFangSC-regular;
     }
+
+    .img {
+      width: 36rpx;
+      height: 36rpx;
+    }
   }
 }
