--- a/src/pages/anylabels/components/label_group/an_label/an_label.scss
+++ b/src/pages/anylabels/components/label_group/an_label/an_label.scss
@@ -1,6 +1,6 @@
 .anlabel {
     margin: 2% 4%;
-    width: max-content;
+    width: 200rpx;
     height: 52rpx;
     line-height: 40rpx;
     border-radius: 26rpx;
