--- a/src/pages/anylabels/components/label_group/label_group.scss
+++ b/src/pages/anylabels/components/label_group/label_group.scss
@@ -15,9 +15,9 @@
 }
 
 .labels {
-    width: 80%;
+    width: 90%;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-evenly;
     flex-wrap: wrap;
     margin: 0rpx auto;
 }
