--- a/src/pages/info/index.module.scss
+++ b/src/pages/info/index.module.scss
@@ -23,7 +23,7 @@
     @extend %ButtonForSign;
     color: red;
     background-color:#ffffff;
-    margin-top: 400rpx;
+    margin-top: 300rpx auto;
   }
 }
 
