--- a/src/pages/index/components/bulletin/index.module.scss
+++ b/src/pages/index/components/bulletin/index.module.scss
@@ -2,6 +2,7 @@
   align-content: center;
   display: block;
   position: relative;
+  margin-bottom: 80rpx;
 
   .linebetween {
     width: 90%;
@@ -24,7 +25,7 @@
     top: 118px;
     left: 96px;
     width: 75%;
-    height: 220px;
+    //height: 220px;
     color: rgba(16, 16, 16, 1);
     font-size: 36px;
     text-align: left;
